# cape

./: .dockerignore  .env.sample  .envrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .license-header  .license-header-solidity  .npmrc  .prettierignore  .prettierrc  404.html  ANCILLARY.html  AssetRegistry.html  CAPE.html  CNAME  Cargo.toml  Dockerfile  Dockerfile-UbuntuBuild  Greeter.html  INTRODUCTION.html  MaliciousERC20TokenContract.html  Procfile  Queue.html  README.md  RecordsMerkleTree.html  RootStore.html  Security.html  SimpleToken.html  Slither.md  SmartContracts.html  brownie-config.yaml  demo.Dockerfile  demo.Procfile  docker-compose.yml  flake.nix  hardhat.config.js  hardhat.config.ts  index.html  (+16 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: arm-build.yaml  build-no-nix.yaml  build.yml  slither.yml  slow-tests.yml  testnet-build.yml
aap-contracts/test/: sample-test.js
addr_pk_map/: Cargo.toml
addr_pk_map/src/: lib.rs  main.rs
addr_pk_map/tests/: tests.rs
address_book/: Cargo.toml  README.md
address_book/src/: lib.rs  main.rs  signal.rs
address_book/tests/: healthcheck.rs  healthcheck_fails.rs  healthcheck_ok.rs  tests.rs
bls12-381/: hardhat.config.js  package-lock.json  package.json
bls12-381/test/: sample-test.js
contracts/: .gitignore  .solhint.json  AAPE.sol  BLS12381.sol  BN254.sol  CAPE.sol  DummyCAPE.sol  DummyPlonkVerifier.sol  DummyValidator.sol  DummyVerifier.sol  ExpMod.sol  Greeter.sol  NullifiersMerkleTree.sol  NullifiersStore.sol  README.md  ReadAAPTx.sol  RecordsMerkleTree.sol  Rescue.sol  RescueNonOptimized.sol  SetMerkleTree.sol  SimpleToken.sol  TestAAPE.sol  TestBN254.sol  TestCAPE.sol  TestRecordsMerkleTree.sol  TestRescue.sol  TestRescueNonOptimized.sol  TestTranscript.sol  Wrapper.sol  bn254.sol  brownie-config.yaml  hardhat.config.ts  helpers.sol  package.json  testBLS12381.sol  testBN254.sol  tsconfig.json
contracts/BLAKE2b/: BLAKE2b.sol  BLAKE2b_Constants.sol
contracts/arbitrum/: Rescue.sol
contracts/contracts/: AssetRegistry.sol  BN254.sol  CAPE.sol  DaiToken.sol  DummyCAPE.sol  Greeter.sol  MaliciousToken.sol  (+19 more)
contracts/rust/: .gitignore  Cargo.toml  build.rs
contracts/rust/examples/: contract.sol  create_note.rs  gas_usage.rs  read_note.rs
contracts/rust/src/: assertion.rs  asset_registry.rs  bn254.rs  cap_jf.rs  cape.rs  cape_e2e_test_mint.rs  cape_e2e_test_transfer.rs  cape_e2e_tests.rs  contract_group_operations.rs  deploy.rs  ed_on_bn254.rs  eqs_test.rs  ethereum.rs  helpers.rs  ledger.rs  lib.rs  model.rs  plonk_verifier.rs  poly_eval.rs  queue.rs  root_store.rs  state.rs  test_cape.rs  test_utils.rs  transcript.rs  types.rs  universal_param.rs  wallet.rs
contracts/rust/src/cape/: events.rs  faucet.rs  mod.rs  note_types.rs  reentrancy.rs  submit_block.rs  wrapping.rs
contracts/rust/src/plonk_verifier/: helpers.rs  mod.rs  poly_eval.rs  vk.rs
contracts/rust/src/records_merkle_tree/: mod.rs  rescue.rs
contracts/rust/tests/: ethereum_test.rs  hardhat_deploy.rs  mod.rs  smoke_tests_deployed_contract.rs  unwrapping.rs  wrapped_assets_can_be_frozen.rs  wrapping.rs
contracts/rust/tests/combined/: mod.rs  smoke_tests_deployed_contract.rs  unwrapping.rs  wrapped_assets_can_be_frozen.rs  wrapping.rs
demo/: backend.Procfile  build-docker-geth  compose.env  geth.Dockerfile  initialize-demo-geth  start-geth-docker
doc/: specifications.md
doc/contracts/: Cargo.toml
doc/contracts/src/: lib.rs  relayer.rs
doc/workflow/: Cargo.toml
doc/workflow/src/: constants.rs  erc20.rs  lib.rs  merkle_tree.rs  relayer.rs
eqs/: Cargo.toml  README.md
eqs/api/: api.toml
eqs/src/: api_server.rs  configuration.rs  disco.rs  entry.rs  eqs.rs  errors.rs  eth_polling.rs  lib.rs  main.rs  query_result_state.rs  route_parsing.rs  routes.rs  state_persistence.rs
faucet/: Cargo.toml  README.md
faucet/src/: faucet.rs  faucet_wallet_test_setup.rs  lib.rs
interfaces/: IPlonkVerifier.html
lib/: common.js
local_network_conf/: generate_genesis.js  run_private_geth.sh
nix/: cape_shell.nix  nixpkgs.json  nixpkgs.nix  oxalica_rust_overlay.json  poetryOverrides.nix  precommit.nix  update-nix
relayer/: Cargo.toml  README.md
relayer/src/: api_server.rs  block_builder.rs  configuration.rs  lib.rs  main.rs  shared_types.rs  state_persistence.rs  txn_queue.rs  validation_state.rs
rust/: .gitignore  Cargo.toml  README.md  build.rs  errors.txt  shell.nix
rust/examples/: contract_local_signer.rs  create_note.rs  read_note.rs
rust/src/: aap_jf.rs  cap_jf.rs  contract_group_operations.rs  contract_read_aaptx.rs  contract_read_captx.rs  ethereum.rs  ledger.rs  lib.rs  transcript.rs  types.rs  wallet.rs
rust/src/nullifiers_merkle_tree/: helpers.rs  mod.rs
rust/src/records_merkle_tree/: mod.rs  rescue.rs
rust/src/set_merkle_tree/: mod.rs
rust/tests/: ethereum_test.rs
sandbox/: Base.sol  Sponge.sol  bls.js  hash_challenge_rescue.sol
scripts/: benchmarks.js  cost-nullifiers-hash-map.js  cost-of-reading-inputs.js  gas-report.py
test/: bls12_381.test.js  bn254-test.js  bn254.spec.ts  expmod-test.js  greeter.spec.ts  rescue-test.js  rescue.spec.ts  sample-test.js  sample.spec.ts  test-aape.js  test-cape.js  test-data.ts  test-dummy-cape-contract.js  test-dummy-plonk-verifier.js  test-dummy-validator.js  test-dummy-verifier.js  test-nullifiers-merkle-tree.js  test-records-merkle-tree-profiling.js  test_brownie.py
verifier/: PlonkVerifier.html
wallet/: Cargo.toml  README.md  index.html
wallet/api/: api.toml
wallet/official_assets/: README.md  cape_demo_local_official_assets.toml  cape_v1_official_assets.lib  cape_v1_official_assets.toml  cape_v2_official_assets.lib  cape_v2_official_assets.toml
wallet/public/: index.html
wallet/public/css/: style.css
wallet/public/js/: script.js  ws.js
wallet/src/: backend.rs  cli.rs  cli_client.rs  disco.rs  ip.rs  lib.rs  loader.rs  main.rs  mocks.rs  routes.rs  testing.rs  ui.rs  wallet.rs  web.rs  web_client.rs
wallet/src/wallet-api/: disco.rs  main.rs  routes.rs  web.rs
wallet/src/web_server/: routes.rs  web.rs  web_server.rs
(+99 files in other folders)
