# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "cap-on-ethereum"
version = "0.1.0"
description = ""
authors = ["Espresso Systems <hello@espressosys.com>"]

[tool.poetry.dependencies]
python = "^3.9"
md-toc = "^8.1.1"
pre-commit-hooks = {git = "https://github.com/Lucas-C/pre-commit-hooks"}

[tool.poetry.dev-dependencies]
black = "*"
hdwallet = "^1.3.2"
ipython = "^7.28.0"
slither-analyzer = {git = "https://github.com/crytic/slither", branch = "dev"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
