[package]
name = "address_book"
version = "0.0.2"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
description = "Web server that maintains a persistent mapping from user addresses to user public keys"
license = "GPL-3.0-or-later"
default-run = "address-book"

[[bin]]
name = "address-book"
path = "src/main.rs"

[dependencies]
futures = "0.3.21"
async-std = { version = "1.6.0", features = ["attributes"] }
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
bincode = "1.3.3"
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git" }
net = { git = "https://github.com/EspressoSystems/net.git" }
once_cell = "1"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
surf = "2.3.2"
tide = "0.16.0"
signal-hook = "0.3.13"
signal-hook-async-std = "0.2.2"
tracing = "0.1.26"
hex = "0.4.3"
rand = "0.8.5"
dirs = "4.0.0"
tempdir = "0.3.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
