# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "address_book"
version = "0.0.2"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
description = "Web server that maintains a persistent mapping from user addresses to user public keys"
license = "GPL-3.0-or-later"
default-run = "address-book"

[[bin]]
name = "address-book"
path = "src/main.rs"
doc = false

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
bincode = "1.3.3"
dirs = "4.0.0"
futures = "0.3.21"
hex = "0.4.3"
itertools = "0.10.3"
jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.2" }
net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.1" }
once_cell = "1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3.13"
signal-hook-async-std = "0.2.2"
surf = "2.3.2"
tempdir = "0.3.7"
tide = "0.16.0"
tracing = "0.1.26"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
