[package]
name = "eqs"
version = "0.0.1"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
atomic_store = { version="0.0.2", registry="translucence" }
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
dirs = "4.0"
# may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }

jf-cap = { features=["std"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
jf-primitives = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git" }
key-set = { git = "ssh://git@github.com/EspressoSystems/key-set.git" }

lazy_static = "1.4.0"
markdown = "0.3"
net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
seahorse = { git = "ssh://git@github.com/EspressoSystems/seahorse.git", features = ["testing"] }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3" }
strum = "0.20"
strum_macros = "0.20.1"
surf = { version = "2.3.2", optional = true }
tagged-base64 = { git = "ssh://git@github.com/EspressoSystems/tagged-base64.git", branch = "main" }
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-subscriber = "0.3"

[dev-dependencies]
surf = "2.3.2"

[features]
testing = ["surf"]
