# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "faucet"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "faucet"
path = "src/faucet.rs"
doc = false

[[bin]]
name = "faucet-wallet-test-setup"
path = "src/faucet_wallet_test_setup.rs"
doc = false

[[bin]]
name = "faucet-gen-typescript"
doc = false

[[bin]]
name = "faucet-shower"
doc = false

[dependencies]
ark-std = "0.3.0"

async-std = "1.10.0"
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
cape_wallet = { path = "../wallet" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3.0"
hex = "0.4.3"
itertools = "0.10.3"

jf-cap = { git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.4" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.3" }
net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.2" }
rand = "0.8.5"
rand_chacha = "0.3.1"
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.2" }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "release-0.2" }
serde = "1.0.136"
serde_json = "1.0.67"
snafu = "0.7.0"
structopt = "0.3.26"
surf = "2.3.2"
tempdir = "0.3.7"
tide = "0.16.0"
tracing = "0.1.26"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tracing-test = "0.2.1"
