[package]
name = "relayer"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.0" }
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
dirs = "4.0"
# may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }

jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
jf-primitives = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }

lazy_static = "1.4.0"
net = { git = "https://github.com/EspressoSystems/net.git" }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
reef = { git = "https://github.com/EspressoSystems/reef.git" }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3" }
surf = { version = "2.3.2", optional = true }
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-subscriber = "0.3"

[dev-dependencies]
surf = "2.3.2"


[features]
testing = ["surf"]
