# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "relayer"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minimal-relayer"
path = "src/bin/minimal-relayer.rs"
doc = false

[dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3.21"

jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.2" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.2" }

lazy_static = "1.4.0"
net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.1" }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.1" }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3" }
surf = { version = "2.3.2", optional = true }
tide = "0.16.0"
tracing = "0.1.26"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
surf = "2.3.2"

[features]
testing = ["surf"]
