[package]
name = "aap-rust-sandbox"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
ethers.git = "https://github.com/gakonst/ethers-rs"
ethers.rev = "071a41605ba2a9bffbf618921534ba5e0121f9d8"
# ethers.rev = "fb4d9a9ef1cc9df340023d61a6885693a6a6fcf5" # NOTE: breaks compiliation
jf-txn.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
jf-txn.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"
jf-utils.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
jf-utils.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"

zerok_lib.git = "ssh://git@gitlab.com/translucence/systems/system.git"
zerok_lib.rev = "1a76733a1397390065cd13243e035f4249fc17b5" # use keccak256 hash function

# TODO: remove
# keeping this here because will likely require more hacking
# [patch."ssh://git@gitlab.com/translucence/systems/system.git"]
# zerok_lib = { path = "../../system/zerok/zerok_lib" }

itertools = "0.10.1" # needed for jf-txn to compile
ark-std = "0.3.0"
serde_json = "1.0.67"
bincode = "1.3.3"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
hex = "0.4.3"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0.39"
ark-bn254 = "0.3.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
rand_chacha = "0.3.1"
hex-literal = "0.3.1"
byteorder = "1.4.3"
blake2 = "0.9.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
proptest = "1.0.0"
