[package]
name = "aap-rust-sandbox"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
ethers.git = "https://github.com/gakonst/ethers-rs"
ethers.rev = "4123823383728037b23c18038f9a107902d67756" # before ethers-solc changes

jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest

itertools = "0.10.1" # needed for jf-txn to compile
ark-std = "0.3.0"
serde_json = "1.0.67"
bincode = "1.3.3"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
hex = "0.4.3"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0.39"
ark-bn254 = "0.3.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
rand_chacha = "0.3.1"

[dev-dependencies]
proptest = "1.0.0"
