[package]
name = "cap-rust-sandbox"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
ethers.git = "https://github.com/gakonst/ethers-rs"
ethers.rev = "133382d0344edc0efe9f19f97248a85b5f6b003a"

jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
jf-primitives = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
zerok_lib = { git = "ssh://git@gitlab.com/translucence/systems/system.git", rev="0c5be1a57f007e48f6380eebcd49220b6ff26a82" }

itertools = "0.10.1" # needed for jf-txn to compile
ark-std = "0.3.0"
serde_json = "1.0.67"
bincode = "1.3.3"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-ed-on-bn254 = { version = "0.3.0", default-features = false }

hex = "0.4.3"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0.39"
ark-bn254 = "0.3.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
rand_chacha = "0.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
sha3 = "0.9.1"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
futures = "0.3.16"

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs" }
