[package]
name = "cape_wallet"
version = "0.1.0"
authors = [
    "Jeb Bearer <keyao@translucence.net>",
    "Keyao Shen <keyao@translucence.net>",
    "corbett@pictographer.com",
]
edition = "2018"
license = "Copyright © 2022 Translucence Research, Inc. All rights reserved."

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
address_book = { path = "../address_book" }
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
commit = { git = "ssh://git@github.com/EspressoSystems/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
escargot = "0.5.2"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures = "0.3.0"
futures-util = "0.3.8"
itertools = "0.10.1"
jf-cap = { features = ["test_apis"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
key-set = { git = "ssh://git@github.com/EspressoSystems/key-set.git" }
lazy_static = "1.4.0"
jf-plonk = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git" }
jf-primitives = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git"}
jf-utils = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git"}
markdown = "0.3"
net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
rand = "0.8.4"
pipe = { version = "0.4" }
rand_chacha = "0.3.1"
regex = "1.5.4"
reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
relayer = { path = "../relayer", features = ["testing"] }
seahorse = { git = "ssh://git@github.com/EspressoSystems/seahorse.git", rev = "48aaed68d922b23e4a3d9f4e9dcc6d50185c3619", features = ["testing"] }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.0"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3", features = ["paw"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.2"
tagged-base64 = { git = "ssh://git@github.com/EspressoSystems/tagged-base64.git", branch = "main" }
tempdir = "0.3.7"
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-distributed = "0.3.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2.19"
universal-param = { git = "ssh://git@github.com/EspressoSystems/universal-param.git" }

[dev-dependencies]
tempdir = "0.3.7"
tracing-test = "0.2.1"

[features]
default = ["testing"]
testing = []
slow-tests = []
