[package]
name = "cape_wallet"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "wallet-api"
path = "src/wallet-api/main.rs"

[dependencies]
address_book = { path = "../address_book" }
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
base64 = "0.13"
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
eqs = { path = "../eqs" }
escargot = "0.5.2"
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros" }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures = "0.3.0"
futures-util = "0.3.8"
itertools = "0.10.1"
jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
lazy_static = "1.4.0"
markdown = "0.3"
net = { git = "https://github.com/EspressoSystems/net.git" }
pipe = { version = "0.4" }
rand = "0.8.4"
rand_chacha = "0.3.1"
reef = { git = "https://github.com/EspressoSystems/reef.git" }
regex = "1.5.4"
relayer = { path = "../relayer", features = ["testing"] }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", features = ["testing"] }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.0"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3", features = ["paw"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.2"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
tempdir = "0.3.7"
tide = "0.16.0"
tide-tracing = "0.0.11"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-distributed = "0.4"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
ark-serialize = "0.3.0"
tracing-test = "0.2.1"

[features]
default = ["testing"]
testing = []
slow-tests = []
