# Copyright (c) 2022 Espresso Systems (espressosys.com)
# This file is part of the Configurable Asset Privacy for Ethereum (CAPE) library.
#
# This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
# This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
# You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cape_wallet"
version = "0.2.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "wallet-api"
path = "src/wallet-api/main.rs"

[[bin]]
name = "random-wallet"
doc = false

[[bin]]
name = "random-wallet-in-mem"
doc = false

[dependencies]
address_book = { path = "../address_book" }
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
base64 = "0.13"
bincode = "1.3.3"
cap-rust-sandbox = { path = "../contracts/rust" }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
eqs = { path = "../eqs" }
escargot = "0.5.2"
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3.0"
futures-util = "0.3.8"
itertools = "0.10.3"
jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.2" }
jf-plonk = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
jf-utils = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.2" }
lazy_static = "1.4.0"
markdown = "0.3"
net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.1" }
pipe = { version = "0.4" }
rand = "0.8.4"
rand_chacha = "0.3.1"
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.1" }
regex = "1.5.4"
relayer = { path = "../relayer", features = ["testing"] }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.2.3", features = ["testing"] }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
shellexpand = "2.0"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = { version = "0.3", features = ["paw"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.2"
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.1.0" }
tempdir = "0.3.7"
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5"
tracing = "0.1.26"
tracing-distributed = "0.4"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
ark-serialize = "0.3.0"
reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.1", features = ["testing"] }
seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", tag = "0.2.3", features = ["testing"] }
tracing-test = "0.2.1"

[features]
default = ["testing"]
testing = ["reef/testing", "seahorse/testing"]
slow-tests = []
