[package]
name = "cap-rust-sandbox"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
commit = { git = "ssh://git@github.com/SpectrumXYZ/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
jf-plonk = { features=["std", "test_apis"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
jf-cap = { features = ["test_apis"], git = "ssh://git@github.com/SpectrumXYZ/cap.git", rev = "cba0b2fc682606b0a118b320d41f718c525b4192" }
jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git" }
reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git" }
universal-param = { git = "ssh://git@github.com/SpectrumXYZ/universal-param.git" }
zerok-macros = { git = "ssh://git@github.com/SpectrumXYZ/zerok-macros.git" }
arbitrary = { version="1.0", features=["derive"] }
arbitrary-wrappers = { git = "ssh://git@github.com/SpectrumXYZ/arbitrary-wrappers.git" }

# We need the legacy feature in order to avoid gas estimation issues. See https://github.com/gakonst/ethers-rs/issues/825
ethers = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
ethers-core = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
ethers-contract = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }

itertools = "0.10.1" # needed for jf-cap to compile
ark-std = "0.3.0"
serde_json = "1.0.67"
bincode = "1.3.3"
ark-serialize = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-ed-on-bn254 = { version = "0.3.0", default-features = false }
ark-poly = "0.3.0"
hex = "0.4.3"
lazy_static = "1.4.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0.39"
ark-bn254 = "0.3.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
rand_chacha = "0.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
sha3 = "0.9.1"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
futures = "0.3.16"
strum_macros = "0.20.1"
async-recursion = "1.0.0"
snafu = { version = "0.7", features = ["backtraces"] }

# copied from jellyfish-apps
[dependencies.ark-poly-commit]
git = "https://github.com/arkworks-rs/poly-commit/"
rev = "cafc05e39692bbc5c383990063ad851f0b94a553"
default-features = false

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
glob = "^0.3.0"
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs" }
